src/test/ui/issues/issue-54954.stderr
error[E0379]: functions in traits cannot be declared const
  --> $DIR/issue-54954.rs:5:5
   |
LL |     const fn const_val<T: Sized>() -> usize {
   |     ^^^^^ functions in traits cannot be const

error[E0789]: cannot call associated function on trait without specifying the corresponding `impl` type
  --> $DIR/issue-54954.rs:1:24
   |
LL |   const ARR_LEN: usize = Tt::const_val::<[i8; 123]>();
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot call associated function of trait
...
LL | /     const fn const_val<T: Sized>() -> usize {
LL | |
LL | |         core::mem::size_of::<T>()
LL | |     }
   | |_____- `Tt::const_val` defined here

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-54954.rs:11:15
   |
LL | fn f(z: [f32; ARR_LEN]) -> [f32; ARR_LEN] {
   |               ^^^^^^^ referenced constant has errors

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-54954.rs:11:34
   |
LL | fn f(z: [f32; ARR_LEN]) -> [f32; ARR_LEN] {
   |                                  ^^^^^^^ referenced constant has errors

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0080, E0379, E0789.
For more information about an error, try `rustc --explain E0080`.
